# IDS-706-Python-Rust-XS110

./: Cargo.toml  GroceryDB.db  Makefile  README.md  main.py  python_performance.md  rust_performance.md
.github/workflows/: cicd.yml
mylib/: lib.py
src/: lib.rs  main.rs
tests/: db_operations_test.rs
