[package]
name = "sqlite_database" #crate name
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29"
libc = "^0.2"
time = "^0.1"
rand = "^0.3"
rustc-serialize = "^0.3"
rust-crypto = "^0.2"
clap = { version = "4.3.17", features = ["derive"] }
assert_cmd = "^2.0"
tempdir = "0.3"
predicates = "0.9"
sys-info = "0.7.0"